# LinuxSignalHandlerExample

./: CMakeLists.txt  README.md  main.cpp  signalHandler.cpp
include/: main.h  signalHandler.hpp
tests/: test_signalHandler.cpp
